Remove JVM options no longer needed