@@ -8,7 +8,7 @@ wrapper {
 }
 
 mainClassName = 'mqttloader.Loader'
-applicationDefaultJvmArgs = ['-Djava.util.logging.config.file=src/dist/logging.properties', '-Dfile.encoding=UTF-8', '--illegal-access=deny', '--add-opens=java.base/java.net=ALL-UNNAMED']
+applicationDefaultJvmArgs = ['-Djava.util.logging.config.file=src/dist/logging.properties', '-Dfile.encoding=UTF-8']
 
 repositories {
     mavenCentral()
